css/style.css
/* ... */
/* ABOUT US */

div.about-us.landing-page {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 82%;
  margin: 0 auto 10% auto;
  border-radius: 2em !important;
  border: #3C2F2F solid 2px;
  box-shadow: none;
  gap: 2%;
  transition: all 0.1s ease-in-out;

  img.border-container {
    padding: 0;
    object-fit: cover;
    max-width: 40%;
    box-shadow: none;
    border-radius: 1em;
  }
  

  div.collapsable {

    /* border: red solid thin; */
    margin: 20px 20px 20px 0px;

    h3 {
      text-align: center;
    }

    p {
      text-align: justify;
    }

    section {
      display: flex;
      border-bottom: #acacac solid 2px;
      margin-top: 20px; 
      justify-content: space-between;
    }

    a {
      text-decoration: none;

    }

    div.card {
      border: none !important;
    }

    section.collapsable {
      /* border: red solid thin; */
      margin-bottom: 0;
    }

    div.see-our-menu {
      border-top: #acacac solid 2px;
      border-bottom: #acacac solid 2px;
      display: flex;
      justify-content: center;
      margin-bottom: 30px;
    }

    a.see-our-menu {
      /* border: red solid thin; */
      text-align: center;
      font-size: larger;
      color: #239E86;
      font-weight: 500;
      transition: all 0.1s ease-in-out;
    }

    a.see-our-menu:hover {
      text-decoration: underline;
      margin-right: 5px;
    }
    
  } 

  .location {
    font-weight: bolder;
  }

}

div.about-us.landing-page:hover{
  transform: translateY(-4px) translateX(-2px);
  box-shadow: 8px 8px #3C2F2F;
}

.arrow { /* rotating dropdown arrow :3 */
  transition: 0.5s;
}

  .arrow:not(.collapsed) {
    transform: rotate(180deg);
  }

  .arrow:is(.collapsed) {
    transform: rotate(0deg);
  }

/* ABOUT US END*/

/* MENU END */

/* FOOTER */

footer {

  object {
    margin-top: 50px;
    margin-left: 7%;
    max-width: 250px;
  }

  li {
    list-style-type: none;
  }

  div.footer-content {

    display: flex;
    gap:20%;
    

    h4 {
      font-weight: bolder;
    }

    a {
      font-size: medium;
      text-decoration: none;
    }
    
    h4, a {
      color:#854442;
    }

    a:hover{
      text-decoration: underline;
      transition: text-decoration 0.3s ease-in-out;
    }

    ul {
      margin: 40px 5%;
    }
  }

  .bottom {
    
    padding: 50px 0 30px 0;
    display: flex;
    justify-content: space-around;
    background: #239E86;
    
    p {
      color: white;
      font-size: larger;
    }

    a span{
      color: white;
      margin-right: 5px;
    }

  }
}
/* FOOTER END */

@media screen and (max-width: 1200px) {
  .headline-container {
    
    img {
      display: none;
    }

    .headline {

      h1 {
        font-size: 50px;
        text-align: center;
        margin: 10% 5% 0 5%;
      }

      p {
        font-size: medium;
        margin: 5% 10%;
        text-align: justify;
      }

      a {
        display: block;
        max-width: 50%;
        margin: 0 auto;
      }

      h1, p{
        transition: all 0.3s ease-in-out;
      }
    }

  }
}

@media screen and (max-width: 800px) { /* for phones and below*/

  div.about-us.landing-page {
    flex-direction: column;
    transition: all 0.3s ease-in-out;

    img.border-container {
      max-width: 100%;
      margin-bottom: 5%;
      transition: all 0.3s ease-in-out;
    }

    div.collapsable {
      margin: 0 2% 5% 2%;
      /* border: red solid thin; */
      transition: all 0.3s ease-in-out;

      p {
        span {
          display: none;
          transition: all 0.3s ease-in-out;
        }
      }

    }

    
  }
  
  footer div.footer-content {
    ul {
      margin: 50px 0;
      transition: all 0.3s ease-in-out;
    }
  }

  footer .bottom {

    transition: all 0.3s ease-in-out;

    p {
      font-size: smaller;
      transition: all 0.3s ease-in-out;
    }

    a span {
      font-size: small;
      transition: all 0.3s ease-in-out;
    }
  }

}

/* FOR ALL PAGES */
.page {

  h1.heading.wavy {
    text-align: center;
    color:#FFF2E1;
    font-size: 3vmax;
    padding: 50px 0 80px 0;
  }

  .border-container{
    margin: 50px auto;
    max-width: 50%;
  }

  
  section.collapsable {
    border-top: #acacac solid 2px;
    /* border-bottom: #acacac solid 2px; */
    margin: 10px 0 0 0;
  }

  h4.collapsable {

    display: flex;
    justify-content: space-between;
    padding: 10px 5px 5px 5px;
    

    i {
      display: block;
      color: #854442;
      transition: all 0.3s ease-in-out;
    }

    i:not(.collapsed) {
      transform: rotate(180deg);
    }
  
    i:is(.collapsed) {
      transform: rotate(0deg);
    }

  }

  @media screen and (max-width: 1200px) {
    
    h1.heading {
      font-size: 50px !important;
    }

    .border-container, div.contact-info {
      max-width: 80%;
      transition: all 0.3s ease-in-out;
    }

    div.contact-info {
      /* border: red solid thin; */
      max-width: 100% !important;
      flex-direction: column;

      ul {
        padding-top: 0;
      }
    }
    
  }

  @media screen and (max-width: 800px) {
    .border-container, div.contact-info {
      max-width: 90%;
      transition: all 0.3s ease-in-out;
    }
  }

}

/* !!!! FAQs PAGE !!!! */

div.FAQs {


  p {
    text-align: justify;
  }


  div.border-container {
    
    h3 {
      text-align: center;
      margin: 30px 0;
    }
    
    div.contact-info {
      display: flex;
      justify-content: space-between;
      max-width: 70%;
      margin: 0 auto 30px auto;
      /* border: red solid thin; */      
    }

    ul {
      padding: 0;
    }

    li {
      /* border: red solid thin; */
      list-style-type: none;

      a {
        text-decoration: none;
        color: #3C2F2F;
      }

      span.social-media {
        font-family: 'Consolas', sans-serif;
        margin-left: 8px;
      }

      a:hover {
        text-decoration: underline;
      }

    }
  }
  
}
/* ... */

